[metadata]
description-file = README.md
license_files = LICENSE

[coverage:run]
source = threadguard_enhanced.py
omit = 
    tests/*
    venv/*
    .tox/*

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    raise ImportError
    if __name__ == .__main__.:
    pass
    raise

[coverage:html]
directory = htmlcov

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=threadguard_enhanced --cov-report=term-missing --cov-report=html

[egg_info]
tag_build = 
tag_date = 0
